--- a/src/styles/inject.css
+++ b/src/styles/inject.css
@@ -72,7 +72,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
+    /* overflow: hidden; */
     z-index:2;
     
 }
@@ -83,6 +83,7 @@
     padding-top: 10px;   /* Adds space inside the element, above */
     padding-bottom: 10px;
     width: 2020px;
+    display: flex;
     flex-direction: row;
     transition: .5s ease-in-out;
 }
